--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   "dependencies": {
     "eslint-plugin-babel": "^5.3.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
