--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.2.3",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
@@ -18,6 +19,7 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.2.3",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.2",
@@ -38,6 +40,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
+    "test": "jest",
     "build": "webpack --config webpack.config.prod.js"
   }
 }
