--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
