--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "eslint-plugin-babel": "^5.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
