--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,23 @@
 {
-    "presets": [
-        ["@babel/preset-env",
-        {
-            "targets":{
-                "ie": "11"
-            },
-            "useBuiltIns": "entry",
-            "corejs": {
-                "version": 3,
-                "proposals": true
-            }
-        }],
-        "@babel/preset-react"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "ie": "11"
+        },
+        "useBuiltIns": "entry",
+        "corejs": {
+          "version": 3,
+          "proposals": true
+        }
+      }
     ],
-    "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-proposal-object-rest-spread"]
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread",
+    "transform-async-functions"
+  ]
 }
