--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.2.3",
+    "babel-jest": "^25.2.6",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-async-functions": "^6.22.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^25.2.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.2.6",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.2",
@@ -30,6 +34,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
@@ -46,7 +51,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
-    "test": "jest",
+    "test": "jest --watch",
     "build": "webpack --config webpack.config.prod.js"
   }
 }
