--- a/jest.config.json
+++ b/jest.config.json
@@ -5,5 +5,6 @@
   "moduleNameMapper": {
     "^.+\\.(css|less|scss)$": "babel-jest",
     "^.+\\.(jpg|png|gif|svg)$": "identity-obj-proxy"
-  }
+  },
+  "snapshotSerializers": ["enzyme-to-json/serializer"]
 }
