--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "css-loader": "^3.4.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.2.6",
+    "jest-enzyme": "^7.1.2",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.2",
@@ -51,7 +53,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.dev.js",
-    "test": "jest --watch",
+    "test": "jest",
     "build": "webpack --config webpack.config.prod.js"
   }
 }
