--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^25.2.6",
     "jest-enzyme": "^7.1.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "mock-socket": "^9.0.3",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
