--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-enzyme": "^7.1.2",
     "mini-css-extract-plugin": "^0.9.0",
     "mock-socket": "^9.0.3",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
     "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
@@ -56,5 +57,8 @@
     "start": "webpack-dev-server --config webpack.config.dev.js",
     "test": "jest",
     "build": "webpack --config webpack.config.prod.js"
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
