--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mock-socket": "^9.0.3",
     "pre-commit": "^1.2.2",
     "prettier": "^1.19.1",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
     "url-loader": "^3.0.0",
